--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
 body {
     margin: 0;
     height: 100;
+    background-color: rgb(228, 231, 235);
+
 }
 
 .layout {
@@ -10,34 +12,47 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0%;
-    grid-template: 20% 75% 5% / 20% 60% 20%;
-    background-color: lightsteelblue;
+    grid-template: auto 4% auto auto / 20% 60% 20%;
+    background-color: rgb(228, 231, 235);
     font-family: 'Roboto', sans-serif;
 
 }
 
 .leftPanel {
-    padding: 2%;
+    padding-left: 2%;
     display: grid;
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 1;
-    grid-row-end: 4;
+    grid-row-end: 5;
     background-color: #0284c7;
     color: white;
-    grid-template: 5% auto auto/ 100%;
+    grid-template: auto auto auto/ 100%;
     align-items: center;
-    padding-left: 20%;
+    padding-left: 15%;
+    
+}
+
+box>p{
+    cursor:pointer;
 }
 
 .Hero {
-    display: grid;
+
+    display: flex;
+    flex-direction: row;
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 2;
-    padding-top: 8%;
     justify-self: start;
+    font-size: 1.75vw;
+    width: 110%;
+    justify-self: start;
+    align-items:center;
+    align-self: start;
+    margin-top: 2.5vh;
+
 
 }
 
@@ -47,9 +62,18 @@ body {
     grid-column-end: 2;
     grid-row-start: 2;
     grid-row-end: 3;
-    gap: 20px;
     justify-self: start;
+    font-size: 1.25vw;
 }
+
+.firstOptions>box{
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+    gap: 10%;
+    width: 110%;
+}
+
 
 .secondOptions {
     display: grid;
@@ -57,30 +81,41 @@ body {
     grid-column-end: 2;
     grid-row-start: 3;
     grid-row-end: 4;
-    gap: 20px;
     justify-self: start;
+    font-size: 1.25vw;
+    
+}
+
+
+.secondOptions>box{
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+    
+
+    gap: 10%;
+    width: 110%;
 }
 
 
 .header {
-    padding: 1%;
     display: grid;
     grid-column-start: 2;
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 2;
     background-color: white;
-    border: solid blueviolet;
-
+    align-self: start;
 }
 
 
 .firstLineHeader {
     display: flex;
     flex-direction: row;
-    border: solid black;
-    margin-right: 1.25%;
-    margin-left: 0.25%;
+    margin-right: 2.5%;
+    margin-left: 1.5%;
+    align-self: start;
+
 }
 
 
@@ -90,9 +125,7 @@ body {
     width: 65%;
     display: flex;
     gap: 1%;
-    align-items:center;
-    border: solid gold;
-    
+    align-items:center;    
 }
 
 input {
@@ -114,29 +147,121 @@ input {
     color: gray;
 }
 
+.topRightCorner>img{
+    width: 50px;
+    height: 50px;
+}
+
 .topRightCorner {
     display: flex;
     flex-direction: row;
     gap:25px;
-    border: solid orangered;
     align-items:center;
     justify-content: right;
     width: 35%;
 }
 
+.secondLineHeader{
+    display: flex;
+    flex-direction: row;
+    margin-right: 2.5%;
+    margin-left: 1.5%;
+    align-self: start;
 
-.middleSection {
-    padding: 2%;
-    margin-top: 2vh;
-    margin-left: 2%;
-    margin-right: 2%;
+}
+
+.secondLineLeft {
+    display: flex;
+    flex-direction: row;
+    gap: 2%;
+    align-items:center;
+    width: 100%;
+
+}
+
+.secondLineLeft>img{
+    width: 10%;
+    height:80%;
+    min-width: 60.72px;
+    max-height: 76.01px;
+}
+
+.secondLineRight{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items:center;
+    gap: 5%;
+    width: 100%;
+    flex-wrap: wrap;
+
+}
+
+.secondLineRight>button{
+    background-color: #0284c7;
+    color: white;
+    border-radius:10px;
+    height: 35px;
+    width: 80px;
+    border-width: 0;
+    cursor: pointer;
+}
+
+
+.middleTitleCenter {
     display: grid;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
-    border: solid RED;
+    margin-left: 4%;
 }
+
+.middleTitleRight  {
+    display: grid;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
+
+
+
+.middleSection {
+    display: grid;
+    padding: 2%;
+    margin-top: 2vh;
+    margin-left: 2%;
+    margin-right: 2%;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    border: solid RED;
+    gap:50px;
+    grid-template-columns: repeat(auto-fit, minmax(18vw, 1fr));
+}
+
+
+.middleSection>box {
+    display: grid;
+    background-color: aliceblue;
+    border-radius: 0px;
+    align-self: start;
+    text-align: center;
+    padding: 1%;
+    border-left: solid rgb(223, 196, 42) ;
+    border-width: 10px;
+    border-radius: 10px;
+    width: 75%;
+    height: 100%; 
+    font-size: 1.5vh;
+    text-align: left;
+    box-shadow: 0px 15px 10px -15px #111;
+
+}
+
 
 .rightSection {
     padding: 2%;
@@ -145,8 +270,8 @@ input {
     display: grid;
     grid-column-start: 3;
     grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
     border: solid green;
 
 }
