--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 
 .layout {
     display: grid;
-    height: 100vh;
+    height: 110vh;
     margin: 0;
     padding: 0%;
     grid-template: auto 4% auto auto / 20% 60% 20%;
@@ -223,6 +223,7 @@ input {
     grid-column-end: 4;
     grid-row-start: 2;
     grid-row-end: 3;
+    padding-left: 2%;
 }
 
 
@@ -230,7 +231,8 @@ input {
 
 .middleSection {
     display: grid;
-    padding: 2%;
+    padding-left: 2%;
+    padding-bottom:1%;
     margin-top: 2vh;
     margin-left: 2%;
     margin-right: 2%;
@@ -238,15 +240,17 @@ input {
     grid-column-end: 3;
     grid-row-start: 3;
     grid-row-end: 4;
-    border: solid RED;
     gap:50px;
     grid-template-columns: repeat(auto-fit, minmax(18vw, 1fr));
 }
 
+.title{
+    font-size: 2vh;
+}
 
 .middleSection>box {
     display: grid;
-    background-color: aliceblue;
+    background-color: white;
     border-radius: 0px;
     align-self: start;
     text-align: center;
@@ -264,7 +268,8 @@ input {
 
 
 .rightSection {
-    padding: 2%;
+    padding-left: 2%;
+    padding-right: 2%;
     margin-top: 2vh;
     margin-right: 10%;
     display: grid;
@@ -272,6 +277,81 @@ input {
     grid-column-end: 4;
     grid-row-start: 3;
     grid-row-end: 4;
-    border: solid green;
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+}
+
+.topPart{
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    background-color: white;
+    border-radius: 10px;
+    padding: 5%;
+    box-shadow: 0px 15px 10px -15px #111;
+    height: 100%;
+}
+
+.topPart>box>p {
+    font-size: 1.2vh;
+}
+
+.top,.middle {
+    border-bottom: solid;
+    border-width: 0.5px;
+    border-color: rgb(201, 202, 202);
+}
+
+.bottomPart{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+
+
+.icon>box{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+    gap: 5%;
+
+}
+
+
+.icon>box>img{
+    width: 13%;
+    height:fit-content;
+}
+
+.icon {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.2vh;
+    padding-left: 5%;
+    padding-right: 5%;
+    border-radius: 10px;
+    background-color: white;
+    align-items:center;
+    justify-content: center;
+    box-shadow: 0px 15px 10px -15px #111;
+    height: 100%;
+
+}
+
+/* .icon>box>p{
+    margin: 10px;
+} */
+
+.text>p {
+    margin: 1%;
+}
+
+a {
+    color: #111;
+
 
 }
